// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help Component renders correctly 1`] = `
.emotion-0 .leftFixed {
  color: #424242;
}

.emotion-0 .leftFixed li {
  font-size: 14px;
  font-weight: 700;
}

.emotion-0 .leftFixed .MuiListItemText-primary {
  font-size: 14px;
  margin-left: 10px;
}

.emotion-0 .leftFixed .active {
  background: #F5F5F5;
  font-weight: 700;
}

.emotion-0 .leftFixed .active .MuiListItemText-primary {
  font-weight: 700;
}

.emotion-0 .rightFluid {
  padding-top: 24px;
}

.emotion-1 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  box-sizing: border-box;
  line-height: 48px;
  list-style: none;
  color: #424242;
  font-family: Lato,sans-serif;
  font-weight: 500;
  font-size: 0.7656rem;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
}

.emotion-3.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-3.Mui-selected {
  background-color: rgba(20, 164, 82, 0.08);
}

.emotion-3.Mui-selected.Mui-focusVisible {
  background-color: rgba(20, 164, 82, 0.2);
}

.emotion-3.Mui-disabled {
  opacity: 0.38;
}

.emotion-3.Mui-disabled {
  opacity: 1;
}

.emotion-3.Mui-selected,
.emotion-3.Mui-selected:hover,
.emotion-3:hover {
  background-color: #F5F5F5;
}

.emotion-3.active {
  background-color: #fff;
}

.emotion-3.leftNav.active {
  border-top: 1px solid #d4e9e7;
  border-bottom: 1px solid #d4e9e7;
}

.emotion-3.navLink .MuiListItemText-root color {
  primary: #212121;
  secondary: #424242;
  hint: #424242;
  inactive: #616161;
  entry-link: #DEFFF1;
  disabled: rgba(0, 0, 0, 0.38);
}

.emotion-3.navLink.active .MuiListItemText-root {
  color: #212121;
}

.emotion-3.active {
  background: #f7f7f7;
}

.emotion-4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-top: 0;
  margin-bottom: 0;
  color: #212121;
}

.emotion-4 .MuiListItemText-primary {
  font-size: 0.8rem;
}

.emotion-4 .MuiListItemText-primary:hover {
  color: #14A452;
}

.emotion-5 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
}

.emotion-12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.0938rem;
}

.emotion-12 iconButton {
  margin-right: 8px;
}

<div
  class="help-container emotion-0"
>
  <ul
    class="MuiList-root MuiList-padding leftFixed emotion-1"
  >
    <li
      class="MuiListSubheader-root MuiListSubheader-gutters emotion-2"
    >
      Help & support
    </li>
    <a
      aria-current="page"
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-3 active"
      href="/help/get-started"
    >
      <div
        class="MuiListItemText-root emotion-4"
        url=""
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-5"
        >
          Getting started
        </span>
      </div>
    </a>
    <a
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-3"
      href="/help/support"
    >
      <div
        class="MuiListItemText-root emotion-4"
        url=""
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-5"
        >
          Contact support
        </span>
      </div>
    </a>
    <a
      class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink helpNav emotion-3"
      exact="true"
      href="https://docs.alvaldi.com/"
      rel="noopener noreferrer"
      target="_blank"
      to="https://docs.alvaldi.com/"
    >
      <div
        class="MuiListItemText-root emotion-4"
        url="https://docs.alvaldi.com/"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-5"
        >
          Documentation
        </span>
      </div>
    </a>
  </ul>
  <div
    style="max-width: 780px;"
  >
    <div
      class="help-content relative margin-top-small"
    >
      <div>
        <h2>
          Getting started
        </h2>
        <p>
          To quickly get started with the common use cases of Alvaldi, follow the
           
          <a
            href="https://docs.alvaldi.com/getting-started/"
            rel="noopener noreferrer"
            target="_blank"
          >
            getting started tutorial in our documentation 
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-12"
              data-testid="LaunchIcon"
              focusable="false"
              style="vertical-align: text-bottom;"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
            </svg>
          </a>
          .
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Help Component static components renders GettingStarted correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.0938rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div>
  <h2>
    Getting started
  </h2>
  <p>
    To quickly get started with the common use cases of Alvaldi, follow the
     
    <a
      href="https://docs.alvaldi.com/getting-started/"
      rel="noopener noreferrer"
      target="_blank"
    >
      getting started tutorial in our documentation 
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
    .
  </p>
</div>
`;

exports[`Help Component static components renders MenderHub correctly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.0938rem;
}

.emotion-0 iconButton {
  margin-right: 8px;
}

<div>
  <h3>
    Find technical help at Mender Hub
  </h3>
  <a
    href="https://hub.mender.io"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      <img
        src="mender-hub-logo.png"
        style="width: 50%;"
      />
    </span>
  </a>
  <p>
    <a
      href="https://hub.mender.io"
      rel="noopener noreferrer"
      target="_blank"
    >
      Mender Hub
    </a>
     
    is a forum where you can ask technical questions and get help from our active and knowledgeable community.
  </p>
  <h4>
    Board integrations
  </h4>
  <p>
    Get help and instructions for integrating Mender with different boards and operating systems.
  </p>
  <h4>
    Community-supported resources
  </h4>
  <p>
    Find out-of-the-box and community-supported Update Modules and Configuration Scripts, and contribute your own.
  </p>
  <h4>
    Tutorials
  </h4>
  <p>
    Tutorials and how-to guides for various Mender use-cases including Yocto Project features and practices.
  </p>
  <h4>
    Feature requests
  </h4>
  <p>
    Submit your feature requests and feedback. Mender is an open source project and we encourage community contributions.
  </p>
  <p>
    <a
      href="https://hub.mender.io"
      rel="noopener noreferrer"
      target="_blank"
    >
      Visit Mender Hub 
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-0"
        data-testid="LaunchIcon"
        focusable="false"
        style="vertical-align: text-bottom;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
        />
      </svg>
    </a>
  </p>
</div>
`;

exports[`Help Component static components renders Support correctly 1`] = `
<div>
  <h2>
    Contact support
  </h2>
  <p>
    Do you have a paid plan and need to contact support?
  </p>
  <p>
    Send an email to
     
    <a
      href="mailto:support@northern.tech"
      rel="noopener noreferrer"
      target="_blank"
    >
      support@northern.tech
    </a>
    , including your organization name and how we can help you.
  </p>
  <h3>
    Reporting bugs
  </h3>
  <p>
    To help us best respond to bug reports, please include:
  </p>
  <ul>
    <li>
      Which software versions you are using
    </li>
    <li>
      If the issue can be reproduced, what are the steps to reproduce it?
    </li>
    <li>
      In case of a UI issue, any screenshots or screen recordings
    </li>
  </ul>
</div>
`;
